<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailsActivity">
    <include
        layout="@layout/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_wpn_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wpn_title"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textAlignment="center"
            />
        <ImageView
            android:id="@+id/img_wpn"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/godslayers_greatsword_colossal_swords_elden_ring"
            android:contentDescription="@string/wpn_description" />
        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/skill"
            />
        <TextView
            android:id="@+id/tv_wpn_skill"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wpn_description"
            />
        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/wpn_description_title"
            />
        <TextView
            android:id="@+id/tv_wpn_description"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wpn_description"
            />
        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Weapon Attributes"
            android:textStyle="bold"
            android:textSize="16sp"
            />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            >
            <TableRow>
                <TextView
                    android:textAlignment="textEnd"
                    android:text="@string/base_atk"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    />
                <TextView
                    android:layout_marginStart="12dp"
                    android:id="@+id/tv_wpn_attr_atk"
                    android:text="@string/wpn_stat_atk"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:textAlignment="textEnd"
                    android:text="@string/item_weight"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    />
                <TextView
                    android:layout_marginStart="12dp"
                    android:id="@+id/tv_wpn_attr_weight"
                    android:text="@string/wpn_stat_atk"
                    />
            </TableRow>
        </TableLayout>

    </LinearLayout>
    </ScrollView>


</LinearLayout>